[package]
name = "futures-openssl"
version = "0.5.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
repository = "https://github.com/alexcrichton/tokio-openssl"
homepage = "https://github.com/alexcrichton/tokio-openssl"
documentation = "https://docs.rs/tokio-openssl"
description = """
An implementation of SSL streams for Tokio backed by OpenSSL
"""

[dependencies]
openssl = "0.10.30"
openssl-sys = "0.9.58"
futures = "0.3"

[dev-dependencies]
async-std = { version = "1.7", features = [ "attributes" ] }